# esp-dl

./: ESP32-P4_COCO_Pose_Models_Development_Guide.md
docs/zh_CN/tutorials/: how_to_implement_posture_detection.rst
examples/8.lcd_camera_lvgl_v8/: CMakeLists.txt  README_POSTURE_DETECTION.md  partitions.csv  sdkconfig.defaults
examples/8.lcd_camera_lvgl_v8/main/: CMakeLists.txt  app_camera.c  app_camera.h  app_main.cpp  idf_component.yml  ksdiy_lvgl_port.c  ksdiy_lvgl_port.h  page_cam.cpp  page_cam.h  posture_analyzer.cpp  posture_analyzer.hpp
examples/lcd_camera/: CMakeLists.txt  README.md  partitions.csv
examples/lcd_camera/main/: CMakeLists.txt  app_main.c  app_video.h  idf_component.yml  posture_analyzer.cpp  posture_analyzer.hpp  posture_analyzer_wrapper.cpp
examples/posture_detection/: CMakeLists.txt  QUICKSTART.md  README.md  sdkconfig.defaults
examples/posture_detection/main/: CMakeLists.txt  app_main.cpp  posture_analyzer.cpp  posture_analyzer.hpp
examples/posture_detection/tools/: convert_posture_model.py
examples/yolo11_pose/main/: app_main.cpp
examples/yolo11_pose_p4/: DISPLAY_MODES.md  SKELETON_CONNECTIONS.md
examples/yolo11_pose_p4/main/: app_main.cpp  app_video.c  idf_component.yml  ksdiy_lvgl_port.h
examples/yolo11_pose_test/main/: app_main.cpp  camera_test.c  camera_test.h  idf_component.yml  ksdiy_lvgl_port.c  ksdiy_lvgl_port.h
models/coco_pose/: CMakeLists.txt  Kconfig  coco_pose.cpp  coco_pose.hpp
models/coco_pose/models/: coco_pose_yolo11n_pose_256_p4.espdl  coco_pose_yolo11n_pose_256_p4.info
